--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,15 +13,31 @@ svg {
 
   #map-holder {
     border: 3px solid teal;
+    height: 100%;
     border-radius: 10px;
     padding: 20px;
+    position: relative;
   }
 
   #loading {
-    width: 100px;
+    width: 20%;
     display: block;
     position: absolute;
-    bottom: 50%;
+    bottom: 44%;
     right: 50%;
     z-index: 100;
+  }
+
+  #info {
+    width: 260px;
+    height: 200px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 1px solid teal;
+    border-radius: 10px;
+    margin: 20px;
+    display: none;
+    padding-left: 20px;
+    padding-right: 20px;
   }
